--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -901,7 +901,7 @@ if(NOT DISABLE_DBUS)
     if(DBUS_FOUND)
         set(PCAP_SUPPORT_DBUS TRUE)
         set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} pcap-dbus.c)
-        include_directories(${DBUS_INCLUDE_DIR})
+        include_directories(${DBUS_INCLUDE_DIRS})
         set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} ${DBUS_LIBRARY})
     endif(DBUS_FOUND)
 endif(NOT DISABLE_DBUS)
