<XPREFIX>_LIBRARIES, not <XPREFIX>_LIBRARY.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -959,7 +959,7 @@ if(NOT DISABLE_DBUS)
         set(PCAP_SUPPORT_DBUS TRUE)
         set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} pcap-dbus.c)
         include_directories(${DBUS_INCLUDE_DIRS})
-        set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} ${DBUS_LIBRARY})
+        set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} ${DBUS_LIBRARIES})
     endif(DBUS_FOUND)
 endif(NOT DISABLE_DBUS)
 
