--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1235,7 +1235,7 @@ elseif(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
     #
     set(MAN_FILE_FORMATS 4)
     set(MAN_MISC_INFO 5)
-elseif(CMAKE_SYSTEM_NAME STREQUAL "IRIX" OR CMAKE_SYSTEM_NAME STREQUAL "IRIX64"))
+elseif(CMAKE_SYSTEM_NAME STREQUAL "IRIX" OR CMAKE_SYSTEM_NAME STREQUAL "IRIX64")
     #
     # Use System V conventions for man pages.
     #
