Put rpcap protocol routines common to client and server in rpcap-protocol.c
That way, rpcapd doesn't depend on them being exported from libpcap
(which they shouldn't be).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -480,7 +480,7 @@ endif(WIN32)
 
 if(HAVE_REMOTE)
     set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C}
-        pcap-new.c pcap-rpcap.c sockutils.c)
+        pcap-new.c pcap-rpcap.c rpcap-protocol.c sockutils.c)
 endif(HAVE_REMOTE)
 
 #
