--- a/rpcapd/CMakeLists.txt
+++ b/rpcapd/CMakeLists.txt
@@ -22,8 +22,6 @@ endif(NOT MSVC)
 
 if(CMAKE_USE_PTHREADS_INIT OR PTHREADS_FOUND)
 
-set(BUILDING_RPCAPD 1)
-
 if(WIN32)
 set(RPCAPD_EXTRA_SOURCES win32-svc.c ${pcap_SOURCE_DIR}/pcap-dll.rc)
 add_definitions(-DWIN32_LEAN_AND_MEAN -DBUILDING_RPCAPD)
@@ -43,5 +41,11 @@ if(UNIX)
 endif(UNIX)
 
 target_link_libraries(rpcapd ${LIBRARY_NAME}_static ${PCAP_LINK_LIBRARIES})
+
+if(MSVC AND CMAKE_SIZEOF_VOID_P EQUAL 8)
+  install(TARGETS rpcapd DESTINATION bin/amd64)
+else(MSVC AND CMAKE_SIZEOF_VOID_P EQUAL 8)
+  install(TARGETS rpcapd DESTINATION bin)
+endif(MSVC AND CMAKE_SIZEOF_VOID_P EQUAL 8)
 
 endif(CMAKE_USE_PTHREADS_INIT OR PTHREADS_FOUND)
