Give a full path for pcap-config in the install() command.
It defaults to the source directory, which may happen to have a
pcap-config if an in-tree autotools build was done, but wouldn't have it
otherwise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1727,7 +1727,7 @@ if(NOT WIN32)
         set(LIBS "${LIBS} -l${LIB}")
     endforeach(LIB)
     configure_file(${CMAKE_SOURCE_DIR}/pcap-config.in ${CMAKE_CURRENT_BINARY_DIR}/pcap-config @ONLY)
-    install(PROGRAMS pcap-config DESTINATION bin)
+    install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/pcap-config DESTINATION bin)
 endif(NOT WIN32)
 
 # uninstall target
