--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1714,7 +1714,8 @@ endif(WIN32)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/pcap/ DESTINATION include/pcap)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pcap.h DESTINATION include)
 
-# On UN*X, generate pcap-config and arrange that it be installed.
+# On UN*X, and on Windows when not using MSVC, generate pcap-config and arrange
+# that it be installed.
 if(NOT MSVC)
     set(prefix ${CMAKE_INSTALL_PREFIX})
     set(exec_prefix "\${prefix}")
