--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ env:
   matrix:
     - REMOTE=disable
     - REMOTE=enable
+    - CMAKE=no
+    - CMAKE=yes
 
 matrix:
   fast_finish: true
@@ -69,9 +71,13 @@ install:
 before_script:
 
 script:
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then touch .devel configure; fi
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then echo '$ ./configure [...]' && echo -n travis_fold:start:script.configure; fi
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then ./configure --prefix=/tmp "--${REMOTE}-remote"; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 && "$CMAKE" = no ]; then touch .devel configure; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 && "$CMAKE" = no ]; then echo '$ ./configure [...]' && echo -n travis_fold:start:script.configure; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 && "$CMAKE" = no ]; then ./configure --prefix=/tmp "--${REMOTE}-remote"; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 && "$CMAKE" = yes ]; then mkdir build; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 && "$CMAKE" = yes ]; then cd build; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 && "$CMAKE" = yes && "$REMOTE" = enable ]; then cmake -DCMAKE_INSTALL_PREFIX=/tmp -DENABLE_REMOTE=ON ..; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 && "$CMAKE" = yes && "$REMOTE" != enable ]; then cmake -DCMAKE_INSTALL_PREFIX=/tmp ..; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then echo -n travis_fold:end:script.configure; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then make -s all findalldevstest; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then echo '$ make install [...]' && echo -n travis_fold:start:script.make_install; fi
