Do the matrix correctly.
Travis won't do the Cartesian product for you, so you have to do it
yourself.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ env:
     # usual processing: false.
     - coverity_scan_script_test_mode=false
   matrix:
-    - REMOTE=disable
-    - REMOTE=enable
-    - CMAKE=no
-    - CMAKE=yes
+    - REMOTE=disable CMAKE=no
+    - REMOTE=disable CMAKE=yes
+    - REMOTE=enable CMAKE=no
+    - REMOTE=enable CMAKE=yes
 
 matrix:
   fast_finish: true
