--- a/.travis.yml
+++ b/.travis.yml
@@ -76,8 +76,8 @@ script:
   - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = no ]; then ./configure --prefix=/tmp "--${REMOTE}-remote"; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes ]; then mkdir build; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes ]; then cd build; fi
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes && "$REMOTE" = enable ]; then cmake -DCMAKE_INSTALL_PREFIX=/tmp -DENABLE_REMOTE=ON ..; fi
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes && "$REMOTE" != enable ]; then cmake -DCMAKE_INSTALL_PREFIX=/tmp ..; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes -a "$REMOTE" = enable ]; then cmake -DCMAKE_INSTALL_PREFIX=/tmp -DENABLE_REMOTE=ON ..; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes -a "$REMOTE" != enable ]; then cmake -DCMAKE_INSTALL_PREFIX=/tmp ..; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then echo -n travis_fold:end:script.configure; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then make -s all findalldevstest; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then echo '$ make install [...]' && echo -n travis_fold:start:script.make_install; fi
