Fix check_library_exists() call.
It takes four arguments, not 3.

Travis FTW!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -988,7 +988,7 @@ if(NOT DISABLE_RDMA)
     if(LIBIBVERBS_HAS_IBV_GET_DEVICE_LIST)
         check_include_file(infiniband/verbs.h HAVE_INFINIBAND_VERBS_H)
         if(HAVE_INFINIBAND_VERBS_H)
-            check_library_exists(ibverbs ibv_create_flow PCAP_SUPPORT_RDMASNIFF)
+            check_library_exists(ibverbs ibv_create_flow "" PCAP_SUPPORT_RDMASNIFF)
             if(PCAP_SUPPORT_RDMASNIFF)
                 set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} pcap-rdmasniff.c)
                 set(PCAP_LINK_LIBRARIES ibverbs ${PCAP_LINK_LIBRARIES})
