--- a/.travis.yml
+++ b/.travis.yml
@@ -79,8 +79,9 @@ script:
   - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes -a "$REMOTE" = enable ]; then cmake -DCMAKE_INSTALL_PREFIX=/tmp -DENABLE_REMOTE=ON ..; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes -a "$REMOTE" != enable ]; then cmake -DCMAKE_INSTALL_PREFIX=/tmp ..; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then echo -n travis_fold:end:script.configure; fi
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then make -s all findalldevstest; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = no ]; then make -s all findalldevstest; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes ]; then make -s all; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then echo '$ make install [...]' && echo -n travis_fold:start:script.make_install; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then PATH=$PATH make install; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then echo -n travis_fold:end:script.make_install; fi
-  - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then ./findalldevstest; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = no ]; then ./findalldevstest; fi
