Allow Linux with-remote-capture builds to fail again.
Hopefully, this is the correct syntax.  If anybody can find a Travis
YAML reference (not a generic YAML reference, a reference for what you
can put into YAML) - not a tutorial, but a complete reference - I'd love
to see it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,9 @@ matrix:
   fast_finish: true
   allow_failures:
     - os: linux
-      env: REMOTE=enable
+      env: REMOTE=enable CMAKE=no
+    - os: linux
+      env: REMOTE=enable CMAKE=yes
 
 addons:
   coverity_scan:
