--- a/configure.ac
+++ b/configure.ac
@@ -1224,7 +1224,7 @@ case "$enableval" in
 yes)	AC_MSG_RESULT(yes)
 	AC_WARN([Remote packet capture may expose libpcap-based applications])
 	AC_WARN([to attacks by malicious remote capture servers!])
-	AC_DEFINE(HAVE_REMOTE,,
+	AC_DEFINE(ENABLE_REMOTE,,
 	    [Define to 1 if remote packet capture is to be supported])
 	SSRC="$SSRC pcap-new.c pcap-rpcap.c rpcap-protocol.c sockutils.c"
 	RPCAPD=rpcapd
